crates/ruff_python_parser/tests/snapshots/valid_syntax@match_classify_as_keyword_or_identifier.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/match_classify_as_keyword_or_identifier.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..225,
        body: Suite {
            range: 0..225,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..12,
                        value: Call(
                            ExprCall {
                                node_index: NodeIndex(None),
                                range: 0..12,
                                func: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..5,
                                        id: Name("match"),
                                        ctx: Load,
                                    },
                                ),
                                arguments: Arguments {
                                    range: 6..12,
                                    node_index: NodeIndex(None),
                                    args: [
                                        NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 7..8,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 10..11,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                },
                            },
                        ),
                    },
                ),
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 27..67,
                        subject: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 33..39,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 34..35,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 37..38,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 56..67,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 61..62,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 64..67,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 64..67,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 64..67,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 68..78,
                        value: Subscript(
                            ExprSubscript {
                                node_index: NodeIndex(None),
                                range: 68..78,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 68..73,
                                        id: Name("match"),
                                        ctx: Load,
                                    },
                                ),
                                slice: Slice(
                                    ExprSlice {
                                        node_index: NodeIndex(None),
                                        range: 75..77,
                                        lower: Some(
                                            NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 75..76,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        ),
                                        upper: None,
                                        step: None,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 93..133,
                        subject: List(
                            ExprList {
                                node_index: NodeIndex(None),
                                range: 99..105,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 100..101,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 103..104,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 122..133,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 127..128,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 130..133,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 130..133,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 130..133,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 134..145,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 134..145,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 134..139,
                                        id: Name("match"),
                                        ctx: Load,
                                    },
                                ),
                                op: Mult,
                                right: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 142..145,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 160..171,
                        value: BinOp(
                            ExprBinOp {
                                node_index: NodeIndex(None),
                                range: 160..171,
                                left: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 160..165,
                                        id: Name("match"),
                                        ctx: Load,
                                    },
                                ),
                                op: Sub,
                                right: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 168..171,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 186..224,
                        subject: UnaryOp(
                            ExprUnaryOp {
                                node_index: NodeIndex(None),
                                range: 192..196,
                                op: USub,
                                operand: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 193..196,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 213..224,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 218..219,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 221..224,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 221..224,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 221..224,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
